--- a/Assets/CSV/Examples/Tests/Tests.asmdef
+++ b/Assets/CSV/Examples/Tests/Tests.asmdef
@@ -3,7 +3,9 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "CSV"
+        "CSV",
+        "CSVEditor",
+        "Examples"
     ],
     "includePlatforms": [
         "Editor"
